--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,20 @@
 services:
+    proxy:
+      image: jwilder/nginx-proxy
+      ports:
+        - 80:80
+      volumes: 
+        - /var/run/docker.sock:/tmp/docker.sock:ro
+
+    frontend:
+        image: yaharuott/url_shortener_test_frontend
+        build: 
+          context: ./frontend
+          dockerfile: Dockerfile
+        environment:
+          - VIRTUAL_HOST=yaharuott.ru
+        depends_on:
+          - backend
     backend:
         image: yaharuott/url_shortener 
         build: .
@@ -10,8 +26,8 @@ services:
           - DB_HOST=database
           - DB_PASS=1212!!AaLXX
           - DB_USER=root
-        ports:
-          - 8080:8080
+          - VIRTUAL_HOST=api.yaharuott.ru
+          - VIRTUAL_PORT=8080
         depends_on: 
           - database
         restart: on-failure
