refactor: add url validation and domain logic

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,14 +18,14 @@ services:
     backend:
         image: yaharuott/url_shortener 
         build: .
+        env_file:
+          - path: ./.env
         environment:
           - SERVICE_PORT=8080
           - LENGTH_GEN=8
           - DB_NAME=link_shortener
           - DB_PORT=3306
           - DB_HOST=database
-          - DB_PASS=1212!!AaLXX
-          - DB_USER=root
           - VIRTUAL_HOST=api.yaharuott.ru
           - VIRTUAL_PORT=8080
         depends_on: 
@@ -33,6 +33,5 @@ services:
         restart: on-failure
     database:
         image: mysql:8.4
-        environment:
-          - MYSQL_ROOT_PASSWORD=1212!!AaLXX
-          - MYSQL_DATABASE=link_shortener
+        env_file:
+          - path: ./.env
